# columnar-engine

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitignore  CMakeLists.txt  README.md
.github/: apt-packages.txt
.github/workflows/: cmake-single-platform.yml
benchmarks/: CMakeLists.txt  benchmark_csv_to_columnar.cpp  benchmark_queries.cpp  query_runners.cpp  query_runners.h  scheme.csv
benchmarks/queries/: README.md  query_10.csv  query_11.csv  query_12.csv  query_13.csv  query_14.csv  query_15.csv  query_16.csv  query_17.csv  query_18.csv  query_2.csv  query_21.csv  query_22.csv  query_23.csv  query_24.csv  query_26.csv  query_27.csv  query_28.csv  query_29.csv  query_3.csv  query_30.csv  query_31.csv  query_32.csv  query_33.csv  query_34.csv  query_35.csv  query_36.csv  query_37.csv  query_38.csv  query_39.csv  query_40.csv  query_41.csv  query_42.csv  query_6.csv  query_7.csv  query_8.csv  query_9.csv
benchmarks/results/: readme_benchmarks.csv
benchmarks/support/: query_result_checks.cpp  query_result_checks.h  query_runners.cpp  query_runners.h  query_runners_fast.cpp
cmake/: dependencies_package.cmake  sanitizers.cmake
examples/: CMakeLists.txt  data.csv  example_batch.cpp  example_columnar.cpp  example_columns.cpp  example_csv.cpp  example_fileio.cpp  schema.csv
include/: batch.h  batch_io.h  column.h  column_int64.h  column_string.h  columnar.h  csv.h  error.h  fileio.h  magic.h  metadata.h  parsing.h  row_group.h  schema.h  stream.h  temp_file.h  utils.h
include/common/: error.h  int128.h  operator_utils.h  parsing.h  planner_utils.h  string_arena.h  string_pattern_utils.h
include/convert/: csv_columnar.h
include/executor/: aggregate_function.h  aggregate_state.h  comparison_utils.h  executor.h  operator.h  operator_utils.h  operators_internal.h  planner_utils.h  query.h  query_parser.h  query_plan.h  query_planner.h  query_utils.h  typed_value_utils.h
include/io/: batch.h  batch_io.h  columnar_batch.h  columnar_batch_io.h  compression.h  csv.h  csv_batch.h  csv_batch_io.h  file.h  fileio.h  stream.h
include/model/: batch.h  column.h  column_boolean.h  column_character.h  column_date.h  column_int128.h  column_int16.h  column_int32.h  column_int64.h  column_string.h  column_timestamp.h  column_traits.h  fixed_column.h  metadata.h  schema.h  schema_csv.h  variant_column.h
include/sql_parser/: tokenizer.h
include/support/: ascii.h  error.h  int128.h  parsing.h
include/testing/: executor_test_utils.h  temp_file.h
script/: build.sh  convert.sh  run_query.sh  setup.sh
scripts/: Dockerfile  action.py  commands.sh  dashboard.py  env.sh  install_dependencies.sh  sample_input.columnar  sample_output.csv  schema_input.csv
src/: CMakeLists.txt  batch_io.cpp  column.cpp  column_int64.cpp  column_string.cpp  columnar.cpp  csv.cpp  error.cpp  fileio.cpp  magic.cpp  metadata.cpp  parsing.cpp  row_group.cpp  schema.cpp  stream.cpp  utils.cpp
src/app/: main.cpp
src/common/: ascii.cpp  error.cpp  operator_utils.cpp  parsing.cpp  planner_utils.cpp  string_arena.cpp  string_pattern_utils.cpp
src/convert/: csv_columnar.cpp
src/engine/: foo.cpp
src/executor/: aggregate_states.cpp  comparison_utils.cpp  executor.cpp  operator_utils.cpp  operators.cpp  operators_aggregate.cpp  operators_runtime.cpp  operators_scan.cpp  planner_utils.cpp  query_parser.cpp  query_planner.cpp  query_utils.cpp  typed_value_utils.cpp
src/io/: batch.cpp  batch_io.cpp  columnar_batch.cpp  columnar_batch_io.cpp  compression.cpp  csv.cpp  csv_batch.cpp  csv_batch_io.cpp  file.cpp  fileio.cpp  stream.cpp
src/model/: batch.cpp  column.cpp  column_boolean.cpp  column_character.cpp  column_date.cpp  column_int128.cpp  column_int16.cpp  column_int32.cpp  column_int64.cpp  column_string.cpp  column_timestamp.cpp  metadata.cpp  schema.cpp  schema_csv.cpp
src/sql_parser/: tokenizer.cpp  tokenizer_factory.cpp  tokenizer_tokens.cpp
src/support/: ascii.cpp  error.cpp  parsing.cpp
tests/: CMakeLists.txt  test_batch.cpp  test_columnar.cpp  test_columns.cpp  test_csv.cpp  test_executor.cpp  test_fileio.cpp  test_foo.cpp  test_stream.cpp  test_tokenizer  test_tokenizer.cpp
